--- a/index.html
+++ b/index.html
@@ -146,9 +146,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">My Journey</h2>
-                    <h3 class="section-subheading text-muted">
-
-                    </h3>
+                    <h3 class="section-subheading text-muted">I am a professional architect who has been involved in the industry for over 5 years. My specialties are in the area of interior and exterior design, architecture, and arts. I am good at creative thinking and able to take responsibility and give strong logical resoning.</h3>
                 </div>
                 <ul class="timeline">
                     <li>
@@ -168,9 +166,9 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Nov 2017 - Jul 2022 </h4>
-                                <h4 class="subheading">My journey as an Architect</h4>
+                                <h4 class="subheading">Senior Architect - Alap Kamdar Architects</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">After gaining experience as an Intern, I tried my fortune to apply for a job in an architecture company as a junior architect. I gained many experiences there, particularly in the area of interior, and exterior design, Residences, farmhouses,  cafes, and corporate offices. Only around 1 year after my acceptance, I was promoted to the Assistant Architect of my team. After 1 year again I got promoted to a senior Architect</p></div>
                         </div>
                     </li>
                     <li>
@@ -180,7 +178,7 @@
                                 <h4>Sep 2016 - Mar 2017</h4>
                                 <h4 class="subheading">Internship - Tor Arch Architect</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">While continuing my post-graduate program at the university, I worked as an intern architect. My biggest contribution at that time was to a small company namely Tor-Arch Architecture firm</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -188,7 +186,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2011 - 2016</h4>
-                                <h4 class="subheading">Bachelor in Architecture</h4>
+                                <h4 class="subheading">Bachelors in Architecture</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
                         </div>
