--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 1-->
                         <div class="portfolio-item">
-                            <!-- <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioMagicalArtz">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
-                            </a> -->
+                                <img class="img-fluid" src="assets/img/portfolio/magicalArtz/P1.jpeg" alt="..." />
+                            </a>
 
-                            <img class="img-fluid" src="assets/img/portfolio/musicalArtz/P1.jpeg" alt="..." />
+                            
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Magical Artz</div>
                                 <div class="portfolio-caption-subheading text-muted">Ui / Ux Design</div>
@@ -289,27 +289,32 @@
         </footer>
         <!-- Portfolio Modals-->
         <!-- Portfolio item 1 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="portfolio-modal modal fade" id="portfolioMagicalArtz" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <div class="modal-body">
+                                <div class="modal-body" style="color: #904e55;">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <h2 class="text-uppercase">Magical Artz</h2>
+                                    <p class="item-intro text-muted">Virtual Art Gallery.</p>
+                                    
+                                    <div class="container">
+                                        <div class="row">
+                                            <h3>Case study of Magical Artz</h3>
+                                            <a class="btn btn-primary view-pdf" href="assets/case-study.pdf" target="_blank" >Open case study in new tab</a>
+                                            </br>
+                                        </div>
+                                        </br>
+                                        <embed src="assets/case-study.pdf" frameborder="0" width="100%" height="500px">
+                                    </div>
+                                    </br>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
-                                            Threads
-                                        </li>
-                                        <li>
                                             <strong>Category:</strong>
-                                            Illustration
+                                            Prototype, Visual Design, Wireframe, Hi-Fi, Lo-Fi, User Research, Information Architecture
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
