--- a/index.html
+++ b/index.html
@@ -308,7 +308,16 @@
                                             </br>
                                         </div>
                                         </br>
-                                        <embed src="assets/case-study.pdf" frameborder="0" width="100%" height="500px">
+                                        <!-- <embed src="assets/case-study.pdf" type="application/pdf" frameborder="0" width="100%" height="500px"> -->
+                                        
+                                        <object data="assets/case-study.pdf" type="application/pdf" internalinstanceid="9" title="" width="100%" height="500px">
+                                            <p>
+                                                Your browser isn't supporting embedded pdf files.
+                                                You can download the file
+                                                <a href="assets/case-study.pdf">here</a>.
+                                            </p>
+                                        </object>
+
                                     </div>
                                     </br>
                                     <ul class="list-inline">
