--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#knowledgeAreas">Knowledge Areas</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
@@ -42,15 +42,15 @@
             <div class="container">
                 <div class="masthead-subheading">Welcome To Dolly's Portfolio!</div>
                 <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#knowledgeAreas">Tell Me More</a>
             </div>
         </header>
         <!-- Services-->
-        <section class="page-section" id="services">
+        <section class="page-section" id="knowledgeAreas">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Knowledge Areas</h2>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -59,7 +59,7 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Mobile</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">Innovative mobile app Ui/Ux Design.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -67,7 +67,7 @@
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">Responsive Ui/Ux Design supported for mobile, web, watch and tablet.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -75,7 +75,7 @@
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Web</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">Web Ui/Ux Design.</p>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -146,7 +146,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">My Journey</h2>
-                    <div class="timeline-body"><p class="text-muted text-align-justify">I am a professional architect who has been involved in the industry for over 5+ years. My specialties are in the area of interior and exterior design, architecture, and arts. I am good at creative thinking and able to take responsibility and give strong logical resoning. I will utilize my designing skills to create interactive and meaningful wireframes and designs for digital platforms. While designing I keep in mind that the design is sufficient enough to make them meaningful, unique and interactive.
+                    <div class="timeline-body"><p class="text-muted text-align-justify">I am a professional architect who has been involved in the industry for over 5+ years. My specialties are in the area of interior and exterior design, architecture, and arts. I am good at creative thinking and able to take responsibility and give strong logical reasoning. I will utilize my designing skills to create interactive and meaningful wireframes and designs for digital platforms. While designing I keep in mind that the design is sufficient enough to make them meaningful, unique and interactive.
                     </p></div>
                 </div>
                 <ul class="timeline">
@@ -169,7 +169,7 @@
                                 <h4>Nov 2017 - Jul 2022 </h4>
                                 <h4 class="subheading">Senior Architect - Alap Kamdar Architects</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted text-align-justify">After gaining experience as an Intern, I tried my fortune to apply for a job in an architecture company as a junior architect. I gained many experiences there, particularly in the area of interior, and exterior design, Residences, farmhouses,  cafes, and corporate offices. Only around 1 year after my acceptance, In January 2019 I was promoted to the position of Assistant Architect of my team. In January 2021 I was again promoted by the management to become a senior Architect</p></div>
+                            <div class="timeline-body"><p class="text-muted text-align-justify">After gaining experience as an Intern, I tried my fortune to apply for a job in an architecture company as a junior architect. I gained many experiences there, particularly in the area of interior, and exterior design, Residences, farmhouses,  cafes, and corporate offices. Only around 1 year after my acceptance, In January 2019 I was promoted to the position of Assistant Architect of my team. In January 2021 I was again promoted by the management to become a Senior Architect.</p></div>
                         </div>
                     </li>
                     <li>
@@ -179,7 +179,7 @@
                                 <h4>Sep 2016 - Mar 2017</h4>
                                 <h4 class="subheading">Internship - Tor Arch Architect</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted text-align-justify">While continuing my post-graduate program at the university, I worked as an intern architect. My biggest contribution at that time was to a small company namely Tor-Arch Architecture firm</p></div>
+                            <div class="timeline-body"><p class="text-muted text-align-justify">While continuing my post-graduate program at the university, I worked as an intern architect. My biggest contribution at that time was to a small company namely Tor-Arch Architecture firm.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -197,7 +197,7 @@
                             <h4>
                                 Be Part
                                 <br />
-                                Of Our
+                                Of my
                                 <br />
                                 Story!
                             </h4>
