Google mail setup

--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
                         <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/dollypatel3" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/dollzpatel" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/dolly-modi-b524291a2/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="mailto:vda.dollyp@gmail.com" target="_blank" aria-label="Mail"><i class="fab fa-google"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-end">
                         <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
@@ -359,15 +360,21 @@
                                             </br>
                                         </div>
                                         </br>
-                                        <!-- <embed src="assets/case-study.pdf" type="application/pdf" frameborder="0" width="100%" height="500px"> -->
                                         
-                                        <object data="https://xd.adobe.com/view/2c74212d-bd6a-4e80-928e-6b03be9b2320-7927/" type="web" internalinstanceid="9" title="" width="100%" height="500px">
+                                        <object data="https://xd.adobe.com/view/52ceec34-6c76-4db2-8f22-7bbccdf2e7f1-079d/" type="text/html" internalinstanceid="9" title="" width="100%" height="500px">
                                             <p>
                                                 You can check out the AdobeXD file of Peace World Website by clicking 
-                                                <a href="https://xd.adobe.com/view/2c74212d-bd6a-4e80-928e-6b03be9b2320-7927/" target="_blank">here</a>.
+                                                <a href="https://xd.adobe.com/view/52ceec34-6c76-4db2-8f22-7bbccdf2e7f1-079d/" target="_blank">here</a>.
                                             </p>
                                         </object>
 
+                                        <object data="https://xd.adobe.com/view/52ceec34-6c76-4db2-8f22-7bbccdf2e7f1-079d/" type="text/html" internalinstanceid="9" title="" width="100%" height="500px">
+                                            <p>
+                                                You can check out the Mobile prototype design in AdobeXD file of Peace World by clicking 
+                                                <a href="https://xd.adobe.com/view/942fca78-a84a-41c0-87f1-99a31ed5cfea-c17c/" target="_blank">here</a>.
+                                            </p>
+                                        </object>
+                                        
                                     </div>
                                     </br>
 
