Added case study of Peace world

--- a/index.html
+++ b/index.html
@@ -348,19 +348,27 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Peace World</h2>
-                                    <p class="item-intro text-muted">Peace world is a Ui/Ux Design for Web and Mobile devices.</p>
+                                    <p class="item-intro text-muted">Non-profit Charitable Trust</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/peaceWorld/peaceWorld.png" alt="..." />
                                     <!-- <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p> -->
                                     
                                     <!-- CASE STUDY -->
                                     <div class="container">
                                         <div class="row">
-                                            <h3>Case study of Magical Artz</h3>
-                                            <a class="btn btn-primary view-pdf" href="assets/case-study.pdf" target="_blank" >Open case study in new tab</a>
+                                            <h3>Case study of Peace World</h3>
+                                            <a class="btn btn-primary view-pdf" href="assets/PeaceWorld_CaseStudy.pdf" target="_blank" >Open case study in new tab</a>
                                             </br>
                                         </div>
                                         </br>
                                         
+                                        <object data="assets/PeaceWorld_CaseStudy.pdf" type="application/pdf" internalinstanceid="9" title="" width="100%" height="500px">
+                                            <p>
+                                                Your browser isn't supporting embedded pdf files.
+                                                You can download the file
+                                                <a href="assets/PeaceWorld_CaseStudy.pdf">here</a>.
+                                            </p>
+                                        </object>
+
                                         <object data="https://xd.adobe.com/view/52ceec34-6c76-4db2-8f22-7bbccdf2e7f1-079d/" type="text/html" internalinstanceid="9" title="" width="100%" height="500px">
                                             <p>
                                                 You can check out the AdobeXD file of Peace World Website by clicking 
