Diet Choice project Added

--- a/index.html
+++ b/index.html
@@ -458,12 +458,12 @@
                                         </p>
                                     </br>
                                         <p>
-                                            You can check out the AdobeXD file of Peace World Website by clicking 
-                                            <a href="https://xd.adobe.com/view/52ceec34-6c76-4db2-8f22-7bbccdf2e7f1-079d/" target="_blank">here</a>.
+                                            You can check out the AdobeXD file of Diet Choice Mobile prototype designs by clicking 
+                                            <a href="https://xd.adobe.com/view/6c8eb4d1-c34b-4713-a5a4-c82641fd6e99-39dd/" target="_blank">here</a>.
                                         </p>
                                         <p>
-                                            You can check out the Mobile prototype design in AdobeXD file of Peace World by clicking 
-                                            <a href="https://xd.adobe.com/view/942fca78-a84a-41c0-87f1-99a31ed5cfea-c17c/" target="_blank">here</a>.
+                                            You can check out the website prototype design in AdobeXD file of Diet Choice by clicking 
+                                            <a href="https://xd.adobe.com/view/6e952087-557d-4e84-9f19-67d862f1f0e0-3bc6/" target="_blank">here</a>.
                                         </p>
                                         
                                     </div>
