--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
-                        <li class="nav-item"><a class="nav-link" href="assets/DollyModi_Resume.pdf" target="_blank" >Resume</a></li>
+                        <li class="nav-item"><a class="nav-link" href="assets/DollyModiUIUXResume.pdf" target="_blank" >Resume</a></li>
                         <!-- <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li> -->
                     </ul>
                 </div>
@@ -403,6 +403,14 @@
                                             <a href="https://xd.adobe.com/view/6e952087-557d-4e84-9f19-67d862f1f0e0-3bc6/" target="_blank">here</a>.
                                         </p>
                                         
+                                        <!-- <object data="assets/img/portfolio/shreejiGear/shreejiGear.png" type="application/pdf" internalinstanceid="9" title="" width="100%" height="500px">
+                                            <p>
+                                                Your browser isn't supporting embedded pdf files.
+                                                You can download the file
+                                                <a href="assets/img/portfolio/shreejiGear/shreejiGear.png">here</a>.
+                                            </p>
+                                        </object> -->
+                                        <!-- <img class="img-fluid" src="assets/img/portfolio/shreejiGear.png" alt="..." /> -->
                                     </div>
                                     </br>
 
