-> Accenture Experience added. -> Resume added.
-> Accenture Experience added.
-> Resume added.

--- a/index.html
+++ b/index.html
@@ -198,6 +198,17 @@
                     </p></div>
                 </div>
                 <ul class="timeline">
+                    <!-- PRODUCT DESIGN VIRTUAL INTERNSHIP -->
+                    <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/logos/accenture.webp" alt="Accenture Logo" /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>Feb 2023</h4>
+                                <h4 class="subheading">Accenture Product Design Virtual Internship</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted" style="text-align: justify;">Completed Accenture Product Design Virtual Internship Experience Program with Forge.</p></div>
+                        </div>
+                    </li>
                     <!-- GOOGLE CERTIFICATION -->
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/logos/google.png" alt="..." /></div>
